[package]
name = "asm_6502"
version = "0.1.0"
edition = "2021"

[lib]
name = "asm_6502_lib"
path = "src/lib.rs"

[[bin]]
name = "asm_6502"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
queues = "1.0.2"

