[package]
name = "asm_6502"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
queues = "1.0.2"
wasm-bindgen = "0.2"
tempfile ="3.3.0" 
js-sys  ="0.3.60"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
